split section overflow  css fix

--- a/Styles/global/_defaults.less
+++ b/Styles/global/_defaults.less
@@ -17,7 +17,8 @@ body {
     //overflow: hidden;
 }
 
-.section.side-by-side {
+.section.side-by-side,
+.section.split-section-overlap {
     overflow: hidden;
 }
 
